Fixed: Header Image media queries
Removed big white space below Header Image for both tablets and mobile screens

--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ Theme URI: https://github.com/kevinbazira/algori-shop
 Author: Kevin Bazira  
 Author URI: http://kevinbazira.com/
 Description: A Free Gutenberg Ready WooCommerce WordPress Theme with a clean and professional design that will be a great solution for your Modern eCommerce Shop. It's designed to help you showcase your products and sell more with just about any type of online store.
-Version: 1.1.2
+Version: 1.1.3
 License: GNU General Public License v3 or later
 License URI: https://www.gnu.org/licenses/gpl-3.0.en.html
 Text Domain: algori-shop
@@ -1714,7 +1714,14 @@ button, input[type="button"], input[type="reset"], input[type="submit"] {
 .hero-btn{
   /*font-style:italic;*/
 }
-
+@media all and (max-width: 768px) { 
+	.header-hero {
+		min-height: 0px;
+	}
+	.hero-info {
+		padding: 10% 10% 0% 10%;
+	}
+}
 @media all and (max-width: 480px) { 
 	.hero-description {
 		display: none;
